Atualizado título para Desenvolvedor de Sistemas / Analista de Dados

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfólio de Rodrigo Bertipalha - Analista de Dados">
+    <meta name="description" content="Portfólio de Rodrigo Bertipalha - Desenvolvedor de Sistemas / Analista de Dados">
     
-    <title>Rodrigo Bertipalha | Analista de Dados</title>
+    <title>Rodrigo Bertipalha | Desenvolvedor de Sistemas / Analista de Dados</title>
     
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -139,7 +139,7 @@
                 <div class="max-w-3xl w-11/12 sm:w-4/5 border border-secondary/20 p-6 sm:p-12 rounded-md bg-dark/70 backdrop-blur-sm medieval-card text-center">
                     <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold mb-4 sm:mb-6 animate-slideUp font-cinzel text-primary dark:text-secondary">Rodrigo Bertipalha</h1>
                     <h2 class="text-xl sm:text-2xl md:text-4xl font-medium text-gray-600 dark:text-gray-300 mb-6 sm:mb-10 animate-slideUp animation-delay-100">
-                        Analista de Dados
+                        Desenvolvedor de Sistemas / Analista de Dados
                     </h2>
                     <div class="flex flex-wrap gap-3 sm:gap-5 justify-center animate-fadeIn animation-delay-300">
                         <a href="https://www.linkedin.com/in/rodrigobertipalha" target="_blank" rel="noopener noreferrer" 
@@ -622,7 +622,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-6 md:mb-0">
                     <p class="text-lg font-semibold font-cinzel text-primary dark:text-secondary">Rodrigo Bertipalha</p>
-                    <p class="text-gray-400">Analista de Dados</p>
+                    <p class="text-gray-400">Desenvolvedor de Sistemas / Analista de Dados</p>
                     <p class="text-gray-400 mt-1">Petrolina, Pernambuco, Brasil</p>
                 </div>
                 <div class="flex space-x-4">
