--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </svg>
                             LinkedIn
                         </a>
-                        <a href="https://github.com/seuperfil" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://github.com/RodrigoBertipalha" target="_blank" rel="noopener noreferrer" 
                            class="px-4 sm:px-8 py-3 sm:py-4 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-200 transition flex items-center gap-2 sm:gap-3 hover:shadow-glow-light dark:hover:shadow-glow-gold text-base sm:text-xl">
                             <svg class="h-5 w-5 sm:h-6 sm:w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
@@ -516,13 +516,13 @@
                             </div>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="#" class="px-3 sm:px-4 py-2 bg-primary dark:bg-transparent text-white dark:text-secondary border border-primary dark:border-secondary rounded-md hover:bg-primary/90 dark:hover:bg-secondary/10 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
+                            <a href="https://calculadoragdu.onrender.com/" target="_blank" rel="noopener noreferrer" class="px-3 sm:px-4 py-2 bg-primary dark:bg-transparent text-white dark:text-secondary border border-primary dark:border-secondary rounded-md hover:bg-primary/90 dark:hover:bg-secondary/10 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 sm:h-4 sm:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
                                 </svg>
                                 Demo
                             </a>
-                            <a href="#" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
+                            <a href="https://github.com/RodrigoBertipalha/CalculadoraGDU" target="_blank" rel="noopener noreferrer" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
                                 <svg class="h-3 w-3 sm:h-4 sm:w-4" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
                                 </svg>
@@ -561,7 +561,7 @@
                                 </svg>
                                 Demo
                             </a>
-                            <a href="#" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
+                            <a href="https://github.com/RodrigoBertipalha/DashboardsPowerBI" target="_blank" rel="noopener noreferrer" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
                                 <svg class="h-3 w-3 sm:h-4 sm:w-4" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
                                 </svg>
@@ -572,7 +572,7 @@
                 </div>
                 
                 <!-- SAAS Project -->
-                <div class="mb-8">
+                <div class="mb-16">
                     <h3 class="text-xl sm:text-2xl font-bold mb-4 sm:mb-6 font-cinzel text-primary dark:text-secondary border-b border-primary/30 dark:border-secondary/30 pb-2">Sistema SAAS (Colaboração)</h3>
                     <div class="bg-light-card dark:bg-dark/80 rounded-md shadow-lg overflow-hidden border border-light-border dark:border-secondary/30 p-4 sm:p-6 medieval-card">
                         <h4 class="text-lg sm:text-xl font-semibold mb-2 font-cinzel text-primary dark:text-secondary">Sistema de Gestão Empresarial SAAS</h4>
@@ -600,7 +600,7 @@
                                 </svg>
                                 Demo
                             </a>
-                            <a href="#" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
+                            <a href="https://github.com/NadsonTeles/sistemacaixa" target="_blank" rel="noopener noreferrer" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
                                 <svg class="h-3 w-3 sm:h-4 sm:w-4" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
                                 </svg>
@@ -608,6 +608,39 @@
                             </a>
                         </div>
                         <p class="mt-4 text-xs sm:text-sm text-gray-500 dark:text-gray-400 italic">* Projeto desenvolvido em colaboração, com permissão para exibição no portfólio.</p>
+                    </div>
+                </div>
+                
+                <!-- Atv-Docker Project -->
+                <div class="mb-8">
+                    <h3 class="text-xl sm:text-2xl font-bold mb-4 sm:mb-6 font-cinzel text-primary dark:text-secondary border-b border-primary/30 dark:border-secondary/30 pb-2">Atv-Docker</h3>
+                    <div class="bg-light-card dark:bg-dark/80 rounded-md shadow-lg overflow-hidden border border-light-border dark:border-secondary/30 p-4 sm:p-6 medieval-card">
+                        <h4 class="text-lg sm:text-xl font-semibold mb-2 font-cinzel text-primary dark:text-secondary">Atv-Docker</h4>
+                        <p class="text-gray-600 dark:text-gray-400 mb-4 text-sm sm:text-base">
+                            Projeto de conteinerização de aplicação web com Docker, incluindo múltiplos serviços e orquestração com Docker Compose.
+                        </p>
+                        <div class="mb-4">
+                            <p class="text-gray-700 dark:text-gray-300 mb-2 text-sm sm:text-base"><span class="font-semibold">Problema:</span> Dificuldade em configurar ambientes de desenvolvimento consistentes e manter a paridade entre ambientes de desenvolvimento e produção.</p>
+                            <p class="text-gray-700 dark:text-gray-300 mb-2 text-sm sm:text-base"><span class="font-semibold">Solução:</span> Implementação de containers Docker para cada componente da aplicação, com configuração automatizada e orquestração via Docker Compose.</p>
+                            <p class="text-gray-700 dark:text-gray-300 text-sm sm:text-base"><span class="font-semibold">Impacto:</span> Redução do tempo de configuração de ambiente de desenvolvimento em 90% e eliminação de problemas de incompatibilidade entre ambientes.</p>
+                        </div>
+                        <div class="mb-4">
+                            <div class="flex flex-wrap gap-1 sm:gap-2 mb-4">
+                                <span class="px-2 sm:px-3 py-1 bg-primary/10 dark:bg-dark/80 border border-primary/20 dark:border-secondary/20 text-primary dark:text-secondary rounded-md text-xs sm:text-sm">Docker</span>
+                                <span class="px-2 sm:px-3 py-1 bg-primary/10 dark:bg-dark/80 border border-primary/20 dark:border-secondary/20 text-primary dark:text-secondary rounded-md text-xs sm:text-sm">Docker Compose</span>
+                                <span class="px-2 sm:px-3 py-1 bg-primary/10 dark:bg-dark/80 border border-primary/20 dark:border-secondary/20 text-primary dark:text-secondary rounded-md text-xs sm:text-sm">Node.js</span>
+                                <span class="px-2 sm:px-3 py-1 bg-primary/10 dark:bg-dark/80 border border-primary/20 dark:border-secondary/20 text-primary dark:text-secondary rounded-md text-xs sm:text-sm">MySQL</span>
+                                <span class="px-2 sm:px-3 py-1 bg-primary/10 dark:bg-dark/80 border border-primary/20 dark:border-secondary/20 text-primary dark:text-secondary rounded-md text-xs sm:text-sm">Nginx</span>
+                            </div>
+                        </div>
+                        <div class="flex space-x-3">
+                            <a href="https://github.com/RodrigoBertipalha/Atv-Docker" target="_blank" rel="noopener noreferrer" class="px-3 sm:px-4 py-2 border border-gray-300 dark:border-secondary/30 rounded-md hover:bg-gray-100 dark:hover:bg-secondary/10 dark:text-gray-300 transition flex items-center gap-1 sm:gap-2 text-xs sm:text-sm">
+                                <svg class="h-3 w-3 sm:h-4 sm:w-4" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                                </svg>
+                                GitHub
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -623,7 +656,9 @@
                 <div class="mb-6 md:mb-0">
                     <p class="text-lg font-semibold font-cinzel text-primary dark:text-secondary">Rodrigo Bertipalha</p>
                     <p class="text-gray-400">Desenvolvedor de Sistemas / Analista de Dados</p>
-                    <p class="text-gray-400 mt-1">Petrolina, Pernambuco, Brasil</p>
+                    <p class="text-gray-400 mt-1">Pernambuco, Brasil</p>
+                    <p class="text-gray-400 mt-1">E-mail: rodrigobertipalha25@gmail.com</p>
+                    <p class="text-gray-400 mt-1">Celular: (87) 99801-1356</p>
                 </div>
                 <div class="flex space-x-4">
                     <a href="https://www.linkedin.com/in/rodrigobertipalha" target="_blank" rel="noopener noreferrer" class="p-2 bg-gray-800 hover:bg-primary dark:hover:bg-secondary/20 border border-transparent hover:border-primary dark:hover:border-secondary/50 rounded-md transition" aria-label="LinkedIn">
@@ -631,7 +666,7 @@
                             <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                         </svg>
                     </a>
-                    <a href="https://github.com/seuperfil" target="_blank" rel="noopener noreferrer" class="p-2 bg-gray-800 hover:bg-primary dark:hover:bg-secondary/20 border border-transparent hover:border-primary dark:hover:border-secondary/50 rounded-md transition" aria-label="GitHub">
+                    <a href="https://github.com/RodrigoBertipalha" target="_blank" rel="noopener noreferrer" class="p-2 bg-gray-800 hover:bg-primary dark:hover:bg-secondary/20 border border-transparent hover:border-primary dark:hover:border-secondary/50 rounded-md transition" aria-label="GitHub">
                         <svg class="h-5 w-5 text-gray-300 hover:text-white" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
                         </svg>
